# cloud

./: pyproject.toml  readme.md
bot/: bot.py  requirements.txt
contrainer_utils/: Dockerfile  contrainer_utils.py  requirements.txt
face_recognition/: requirements.txt  utils.py
