[tool.poetry]
name = "yandex_cloud_second_task"
version = "0.1.0"
description = ""
authors = ["Musa"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.47"
requests = "^2.28.1"
sanic = "^22.12.0"
ydb = "^2.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
